import "util.proto";

option java_package = "ralph_protobuffs";
option java_outer_classname = "PartnerNotifyReadyProto";


message PartnerNotifyReady
{
    required UUID host_uuid = 1;
}
